# RAG-for-Source-Text-Summarization

./: .gitignore  .pre-commit-config.yaml  README.md  benchmark.sh  pyproject.toml  rag_pipeline_demo.ipynb  visualization.sh
app/: configs.py  rag.py
app/evaluation/: benchmark.py  time_tracking.py
app/evaluation/EvaluateSummary/: complete_evaluator.py  data_loader.py  prompt_wrapper.py  time_tracker.py
app/evaluation/ExternalHelper/: bart_score.py  ldfacts.py
app/evaluation/SaveMetric/: df2csv.py  merge_json.py  metrics2json.py
app/evaluation/VisualizeMetric/: score_visualizer.py  visualization.py
app/ingestion/: huggingface_datasets_ingestor.py  ingestor.py
app/llms/: bart.py
app/retrieval/: auto_merging_retriever.py  extractive_retriever.py  kg_retriever.py  retriever.py  sentence_window_retriever.py  simple_query_engine.py  topic_extractor.py  topic_retriever.py
data/indexes/merging_index/: default__vector_store.json  docstore.json  index_store.json
data/indexes/sentence_index/: default__vector_store.json  docstore.json  index_store.json
