[tool.poetry]
name = "rag-for-source-text-summarization"
version = "0.1.0"
description = "An application for implementing RAG for summarization of source texts."
authors = [
    "Hamdi Berke Göçmen <berke.gocmen@tum.de>",
    "Guangyao Quan <guangyao.quan@tum.de>",
    "Luca Mattes Wiehe <luca.wiehe@tum.de>"
]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
llama-index = "^0.10.30"
jupyter = "^1.0.0"
llama-index-embeddings-huggingface = "^0.2.0"
pre-commit = "^3.7.0"
trulens-eval = "^0.27.0"
datasets = "2.17.1"
llama-index-llms-huggingface = "^0.1.4"
torch = "2.2.2"
nltk = "^3.8.1"
gensim = "^4.3.2"
scipy = "1.12"
networkx = "^3.3"
pyvis = "^0.3.2"
bertopic = "^0.16.1"
rouge-score = "^0.1.2"
bert-score = "^0.3.13"
mlflow = "^2.13.0"
evaluate = "^0.4.2"
textstat = "^0.7.3"
bert-extractive-summarizer = "^0.10.1"
ragas = "^0.1.9"
seaborn = "^0.13.2"
streamlit = "^1.35.0"
safetensors = "^0.4.3"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
